# android-app

./: .gitignore  1.txt  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app-anr/: build.gradle
app-audio/: build.gradle
app-audio-wav/: build.gradle
app-battery/: build.gradle
app-binder/: build.gradle
app-ble/: build.gradle
app-bluetooth/: build.gradle
app-bluetooth-chat/: build.gradle
app-camera/: README.md  build.gradle
app-component/: build.gradle
app-crash/: build.gradle
app-dagger2/: build.gradle
app-dagger2/doc/: README.md
app-face/: build.gradle
app-face-arc/: build.gradle
app-face-detection/: CMakeLists.txt  build.gradle
app-face-detection/src/androidTest/java/com/afirez/app/face/detection/: ExampleInstrumentedTest.java
app-face-detection/src/main/: AndroidManifest.xml
app-face-detection/src/main/cpp/: com_afirez_app_face_detection_FaceDetection.cpp
app-face-detection/src/main/java/com/afirez/app/face/detection/: FaceDetection.java  MainActivity.java
app-face-detection/src/main/res/layout/: activity_main.xml
app-face-detection/src/main/res/values/: strings.xml
app-face-detection/src/test/java/com/afirez/app/face/detection/: ExampleUnitTest.java
app-gesture-scale-translate/: build.gradle
app-log/: build.gradle
app-lottie/: build.gradle
app-media-player/: build.gradle
app-mp3-lame/: CMakeLists.txt  build.gradle
app-mp3-lame/src/androidTest/java/com/afirez/mp3/lame/: ExampleInstrumentedTest.java
app-mp3-lame/src/main/: AndroidManifest.xml
app-mp3-lame/src/main/cpp/: com_afirez_lame_mp3_Mp3Encoder.cpp  com_afirez_lame_mp3_Mp3Encoder.h  mp3_encoder.cpp  mp3_encoder.h  utils.h
app-mp3-lame/src/main/java/com/afirez/mp3/lame/: MainActivity.java  Mp3Encoder.java
app-mp3-lame/src/main/res/layout/: activity_main.xml
app-mp3-lame/src/main/res/values/: strings.xml
app-mp3-lame/src/test/java/com/afirez/mp3/lame/: ExampleUnitTest.java
app-mp3-player/: build.gradle
app-onactivityresult/: build.gradle
app-performence/: build.gradle
app-qrcode/: build.gradle
app-recyclerview/: build.gradle
app-video-player/: build.gradle
app-wav/: build.gradle
app-zxing/: build.gradle
component-cc/: build.gradle
lib-ble/: build.gradle
lib-common/: build.gradle
lib-common-core/: REAMDE.md  build.gradle
lib-common-life/: build.gradle
lib-common-repository/: REAMDE.md  build.gradle
lib-gradle/: build.gradle
lib-rxlife/: build.gradle
lib-rxui/: build.gradle
lib-zxing/: build.gradle
script/: gradle-mvn-upload.gradle
xf-speech/: build.gradle
(+442 files in other folders)
